# libmbdb

./: .autotools  .cproject  .project  Makefile.am  autogen.sh  configure.ac  libmbdb-1.0.pc.in
include/: Makefile.am
include/libmbdb-1.0/: backup.h  backup_file.h  libmbdb.h  mbdb.h  mbdb_record.h
src/: Makefile.am  backup.c  backup_file.c  mbdb.c  mbdb_record.c
tools/: Makefile.am  mbdbsh.c  mbdbtool.c  mbdbtool2.c
